kubectl_files_backup/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/mydockerapp-network: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: products-db
            - name: MYSQL_ROOT_PASSWORD
              value: password
          image: mysql
          args: 
            - "--ignore-db-dir=lost+found" #CHANGE
          name: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mydockerapp-volume
      restartPolicy: Always
      volumes:
        - name: mydockerapp-volume
          persistentVolumeClaim:
            claimName: mydockerapp-volume
