kubectl_files_backup/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  type: LoadBalancer
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: product-service
